# Notebook_project

./: CMakeLists.txt  README.md  main.c  menu.glade
